--- a/docs/src/components/guide_header/_guide_header.scss
+++ b/docs/src/components/guide_header/_guide_header.scss
@@ -1,10 +1,10 @@
 .guideHeader {
   background: #222;
   color: #FFF !important;
-  height: $kuiSizeXXL;
-  border-bottom: $kuiBorderThin;
-  line-height: $kuiSizeXXL;
-  padding-left: $kuiSizeS;
+  height: $euiSizeXXL;
+  border-bottom: $euiBorderThin;
+  line-height: $euiSizeXXL;
+  padding-left: $euiSizeS;
 }
 
 .guideHeader__link {
