--- a/src/components/button/button_icon/_button_icon.scss
+++ b/src/components/button/button_icon/_button_icon.scss
@@ -4,8 +4,8 @@
   border-color: transparent;
   background-color: transparent;
   box-shadow: none;
-  height: $kuiSizeXL;
-  width: $kuiSizeXL;
+  height: $euiSizeXL;
+  width: $euiSizeXL;
 
   // Account for border.
   .kuiButtonIcon__icon {
@@ -13,15 +13,15 @@
   }
 
   &:disabled {
-    color: $kuiButtonColorDisabled;
+    color: $euiButtonColorDisabled;
     pointer-events: none;
 
     .kuiButtonIcon__icon {
-      fill: $kuiButtonColorDisabled;
+      fill: $euiButtonColorDisabled;
     }
 
     &:hover, &:focus {
-      background-color: $kuiColorEmptyShade;
+      background-color: $euiColorEmptyShade;
       text-decoration: none;
     }
   }
@@ -29,10 +29,10 @@
 
 // Modifier naming and colors.
 $buttonTypes: (
-  primary: $kuiColorPrimary,
-  danger: $kuiColorDanger,
-  disabled: tintOrShade($kuiTextColor, 70%, 80%),
-  ghost: $kuiColorGhost,
+  primary: $euiColorPrimary,
+  danger: $euiColorDanger,
+  disabled: tintOrShade($euiTextColor, 70%, 80%),
+  ghost: $euiColorGhost,
 );
 
 // Create button modifiders based upon the map.
