--- a/src/components/context_menu/_context_menu_item.scss
+++ b/src/components/context_menu/_context_menu_item.scss
@@ -1,15 +1,15 @@
 .kuiContextMenuItem {
-  padding: $kuiSizeM;
+  padding: $euiSizeM;
   width: 100%;
   text-align: left;
-  color: $kuiTextColor;
+  color: $euiTextColor;
 
   &:hover, &:focus {
     text-decoration: underline;
   }
 
   &:focus {
-    background-color: $kuiFocusBackgroundColor;
+    background-color: $euiFocusBackgroundColor;
   }
 }
 
