--- a/src/components/flex/_flex_grid.scss
+++ b/src/components/flex/_flex_grid.scss
@@ -14,10 +14,10 @@
 }
 
 $gutterTypes: (
-  gutterSmall: $kuiSizeS,
-  gutterMedium: $kuiSize,
-  gutterLarge: $kuiSizeL,
-  gutterXLarge: $kuiSizeXL,
+  gutterSmall: $euiSizeS,
+  gutterMedium: $euiSize,
+  gutterLarge: $euiSizeL,
+  gutterXLarge: $euiSizeXL,
 );
 
 $fractions: (
