--- a/src/components/flex/_flex_item.scss
+++ b/src/components/flex/_flex_item.scss
@@ -21,6 +21,6 @@
     width: 100% !important;
     flex-basis: 100% !important;
     margin-left: 0 !important;
-    margin-bottom: $kuiSize !important;
+    margin-bottom: $euiSize !important;
   }
 }
