--- a/src/components/form/checkbox/_checkbox.scss
+++ b/src/components/form/checkbox/_checkbox.scss
@@ -1,6 +1,6 @@
 .kuiCheckbox {
   position: relative;
-  height: $kuiSizeL;
+  height: $euiSizeL;
 
   /**
    * 1. Float above the visual checkbox and match its dimension, so that when users try to click it
@@ -9,15 +9,15 @@
   .kuiCheckbox__input {
     position: absolute; /* 1 */
     opacity: 0; /* 1 */
-    height: $kuiSizeL; /* 1 */
-    width: $kuiSizeL; /* 1 */
+    height: $euiSizeL; /* 1 */
+    width: $euiSizeL; /* 1 */
     z-index: 1; /* 1 */
     margin: 0; /* 1 */
     cursor: pointer;
 
     &:checked ~ .kuiCheckbox__square {
       .kuiCheckbox__check {
-        background-color: $kuiTextColor;
+        background-color: $euiTextColor;
         // This path is relative to ~/docs/postcss.config.js, which uses
         // the postcss-line-svg plugin.
         mask: svg-load('../src/components/icon/assets/check.svg') center center no-repeat;
@@ -26,18 +26,18 @@
 
     &:focus ~ .kuiCheckbox__square,
     &:active ~ .kuiCheckbox__square {
-      background-color: $kuiFocusBackgroundColor;
-      border-color: $kuiColorPrimary;
+      background-color: $euiFocusBackgroundColor;
+      border-color: $euiColorPrimary;
     }
   }
 
   .kuiCheckbox__square {
     position: absolute;
-    height: $kuiSizeL;
-    width: $kuiSizeL;
-    border-radius: $kuiBorderRadius;
-    border: $kuiBorderThin;
-    background: $kuiFormBackgroundColor;
+    height: $euiSizeL;
+    width: $euiSizeL;
+    border-radius: $euiBorderRadius;
+    border: $euiBorderThin;
+    background: $euiFormBackgroundColor;
     z-index: 0;
   }
 
@@ -48,28 +48,28 @@
 
   .kuiCheckbox__label {
     position: absolute;
-    padding-left: $kuiSizeXL;
-    line-height: $kuiSizeL;
+    padding-left: $euiSizeXL;
+    line-height: $euiSizeL;
     display: block;
-    font-weight: $kuiFontWeightRegular;
+    font-weight: $euiFontWeightRegular;
     z-index: 2;
-    font-size: $kuiFontSizeS;
+    font-size: $euiFontSizeS;
     cursor: pointer;
   }
 
   &.kuiCheckbox--inList {
     .kuiCheckbox__input {
       &:checked ~ .kuiCheckbox__square {
-        background: $kuiColorPrimary;
-        border-color: $kuiColorPrimary;
+        background: $euiColorPrimary;
+        border-color: $euiColorPrimary;
 
         .kuiCheckbox__check {
-          background-color: $kuiColorEmptyShade;
+          background-color: $euiColorEmptyShade;
         }
       }
 
       &:focus:checked ~.kuiCheckbox__square {
-        background: tintOrShade($kuiColorPrimary, 20%, 20%);
+        background: tintOrShade($euiColorPrimary, 20%, 20%);
       }
     }
   }
