--- a/src/components/form/form_control_layout/_form_control_layout.scss
+++ b/src/components/form/form_control_layout/_form_control_layout.scss
@@ -11,12 +11,12 @@
 
   .kuiFormControlLayout__icon {
     position: absolute;
-    top: $kuiSizeM;
-    left: $kuiSizeM;
+    top: $euiSizeM;
+    left: $euiSizeM;
   }
 
   .kuiFormControlLayout__icon--right {
     left: auto;
-    right: $kuiSizeM;
+    right: $euiSizeM;
   }
 }
