--- a/src/components/form/switch/_index.scss
+++ b/src/components/form/switch/_index.scss
@@ -1,6 +1,6 @@
-$kuiSwitchHeight: $kuiSizeL;
-$kuiSwitchWidth: ($kuiSizeL * 2) + $kuiSizeXS;
-$kuiSwitchThumbSize: $kuiSizeL;
-$kuiSwitchIconHeight: $kuiSize;
+$euiSwitchHeight: $euiSizeL;
+$euiSwitchWidth: ($euiSizeL * 2) + $euiSizeXS;
+$euiSwitchThumbSize: $euiSizeL;
+$euiSwitchIconHeight: $euiSize;
 
 @import 'switch';
