--- a/src/components/header/_header_popover.scss
+++ b/src/components/header/_header_popover.scss
@@ -3,6 +3,6 @@
  * 2. Override popover default.
  */
 .kuiHeaderPopover {
-  top: calc(100% - #{$kuiSizeS}) !important; /* 1 */
-  border-radius: $kuiBorderRadius 0 $kuiBorderRadius $kuiBorderRadius !important; /* 2 */
+  top: calc(100% - #{$euiSizeS}) !important; /* 1 */
+  border-radius: $euiBorderRadius 0 $euiBorderRadius $euiBorderRadius !important; /* 2 */
 }
