--- a/src/components/loading/_loading_spinner.scss
+++ b/src/components/loading/_loading_spinner.scss
@@ -1,33 +1,33 @@
 .kuiLoadingSpinner {
   display: inline-block;
-  width: $kuiSizeXL;
-  height: $kuiSizeXL;
+  width: $euiSizeXL;
+  height: $euiSizeXL;
   border-radius: 50%;
-  border: solid $kuiSizeXS / 2 $kuiColorLightShade;
-  border-top-color: $kuiColorPrimary;
+  border: solid $euiSizeXS / 2 $euiColorLightShade;
+  border-top-color: $euiColorPrimary;
   animation: kuiLoadingSpinner .6s infinite linear;
 }
 
 .kuiLoadingSpinner--small {
-  width: $kuiSizeS;
-  height: $kuiSizeS;
+  width: $euiSizeS;
+  height: $euiSizeS;
   border-width: 1px;
 }
 
 .kuiLoadingSpinner--medium {
-  width: $kuiSize;
-  height: $kuiSize;
+  width: $euiSize;
+  height: $euiSize;
   border-width: 1px;
 }
 
 .kuiLoadingSpinner--large {
-  width: $kuiSizeL;
-  height: $kuiSizeL;
+  width: $euiSizeL;
+  height: $euiSizeL;
 }
 
 .kuiLoadingSpinner--xLarge {
-  width: $kuiSizeXL;
-  height: $kuiSizeXL;
+  width: $euiSizeXL;
+  height: $euiSizeXL;
 }
 
 @keyframes kuiLoadingSpinner {
