--- a/src/components/modal/_modal_overlay.scss
+++ b/src/components/modal/_modal_overlay.scss
@@ -1,14 +1,14 @@
 .kuiModalOverlay {
   position: fixed;
-  z-index: $kuiZMask;
+  z-index: $euiZMask;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   display: flex;
-  background: transparentize($kuiColorEmptyShade, .1);
+  background: transparentize($euiColorEmptyShade, .1);
   align-items: center;
   justify-content: center;
   padding-bottom: 10vh;
-  animation: kuiAnimFadeIn $kuiAnimSpeedFast ease-in;
+  animation: kuiAnimFadeIn $euiAnimSpeedFast ease-in;
 }
