--- a/src/components/page/page_content/_page_content_header.scss
+++ b/src/components/page/page_content/_page_content_header.scss
@@ -1,5 +1,5 @@
 .kuiPageContentHeader {
-  margin-bottom: $kuiSizeL;
+  margin-bottom: $euiSizeL;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
