--- a/src/components/page/page_side_bar/_page_side_bar.scss
+++ b/src/components/page/page_side_bar/_page_side_bar.scss
@@ -1,6 +1,6 @@
 .kuiPageSideBar {
-  width: $kuiSize * 12;
-  margin-right: $kuiSizeL;
+  width: $euiSize * 12;
+  margin-right: $euiSizeL;
 }
 
 @include screenXSmall {
