--- a/src/global_styling/mixins/_helpers.scss
+++ b/src/global_styling/mixins/_helpers.scss
@@ -34,7 +34,7 @@
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: rgba($kuiColorDarkShade, 0.5);
+    background-color: rgba($euiColorDarkShade, 0.5);
     border: 6px solid transparent;
     background-clip: content-box;
   }
