--- a/src/global_styling/variables/_borders.scss
+++ b/src/global_styling/variables/_borders.scss
@@ -1,9 +1,9 @@
 // Borders
 
-$kuiBorderWidthThin: 1px;
-$kuiBorderWidthThick: 2px;
+$euiBorderWidthThin: 1px;
+$euiBorderWidthThick: 2px;
 
-$kuiBorderColor: $kuiColorLightShade;
-$kuiBorderRadius: 4px;
-$kuiBorderThick: $kuiBorderWidthThick solid $kuiBorderColor;
-$kuiBorderThin: $kuiBorderWidthThin solid $kuiBorderColor;
+$euiBorderColor: $euiColorLightShade;
+$euiBorderRadius: 4px;
+$euiBorderThick: $euiBorderWidthThick solid $euiBorderColor;
+$euiBorderThin: $euiBorderWidthThin solid $euiBorderColor;
