--- a/src/global_styling/variables/_size.scss
+++ b/src/global_styling/variables/_size.scss
@@ -1,8 +1,8 @@
-$kuiSize:     16px;
+$euiSize:     16px;
 
-$kuiSizeXS:   $kuiSize * .25;
-$kuiSizeS:    $kuiSize * .5;
-$kuiSizeM:    $kuiSize * .75;
-$kuiSizeL:    $kuiSize * 1.5;
-$kuiSizeXL:   $kuiSize * 2;
-$kuiSizeXXL:  $kuiSize * 2.5;
+$euiSizeXS:   $euiSize * .25;
+$euiSizeS:    $euiSize * .5;
+$euiSizeM:    $euiSize * .75;
+$euiSizeL:    $euiSize * 1.5;
+$euiSizeXL:   $euiSize * 2;
+$euiSizeXXL:  $euiSize * 2.5;
