--- a/src/global_styling/variables/_z_index.scss
+++ b/src/global_styling/variables/_z_index.scss
@@ -1,19 +1,19 @@
 // Z-Index
 
-$kuiZLevel0:          0;
-$kuiZLevel1:          1000;
-$kuiZLevel2:          2000;
-$kuiZLevel3:          3000;
-$kuiZLevel4:          4000;
-$kuiZLevel5:          5000;
-$kuiZLevel6:          6000;
-$kuiZLevel7:          7000;
-$kuiZLevel8:          8000;
-$kuiZLevel9:          9000;
+$euiZLevel0:          0;
+$euiZLevel1:          1000;
+$euiZLevel2:          2000;
+$euiZLevel3:          3000;
+$euiZLevel4:          4000;
+$euiZLevel5:          5000;
+$euiZLevel6:          6000;
+$euiZLevel7:          7000;
+$euiZLevel8:          8000;
+$euiZLevel9:          9000;
 
-$kuiZContent:         $kuiZLevel0;
-$kuiZContentMenu:     $kuiZLevel2;
-$kuiZNavigation:      $kuiZLevel4;
-$kuiZToastList:       $kuiZLevel5;
-$kuiZMask:            $kuiZLevel6;
-$kuiZModal:           $kuiZLevel8;
+$euiZContent:         $euiZLevel0;
+$euiZContentMenu:     $euiZLevel2;
+$euiZNavigation:      $euiZLevel4;
+$euiZToastList:       $euiZLevel5;
+$euiZMask:            $euiZLevel6;
+$euiZModal:           $euiZLevel8;
