--- a/src/components/context_menu/_context_menu.scss
+++ b/src/components/context_menu/_context_menu.scss
@@ -1,19 +1,19 @@
-$kuiContextMenuWidth: $kuiSize * 16;
+$euiContextMenuWidth: $euiSize * 16;
 
 .kuiContextMenu {
-  width: $kuiContextMenuWidth;
+  width: $euiContextMenuWidth;
   position: relative;
   overflow: hidden;
-  transition: height $kuiAnimSpeedFast $kuiAnimSlightResistance;
-  border-radius: $kuiBorderRadius;
+  transition: height $euiAnimSpeedFast $euiAnimSlightResistance;
+  border-radius: $euiBorderRadius;
 
   .kuiContextMenu__content {
-    padding: $kuiSizeS;
+    padding: $euiSizeS;
   }
 }
 
   .kuiContextMenu__icon {
-    margin-right: $kuiSizeS;
+    margin-right: $euiSizeS;
   }
 
   .kuiContextMenu__itemLayout {
