--- a/src/components/form/form_error_text/_form_error_text.scss
+++ b/src/components/form/form_error_text/_form_error_text.scss
@@ -1,5 +1,5 @@
 .kuiFormErrorText {
-  font-size: $kuiFontSizeXS;
-  padding: $kuiSizeS 0;
-  color: $kuiColorDanger;
+  font-size: $euiFontSizeXS;
+  padding: $euiSizeS 0;
+  color: $euiColorDanger;
 }
