--- a/src/components/form/form_help_text/_form_help_text.scss
+++ b/src/components/form/form_help_text/_form_help_text.scss
@@ -1,5 +1,5 @@
 .kuiFormHelpText {
-  font-size: $kuiFontSizeXS;
-  padding: $kuiSizeS 0;
-  color: $kuiColorDarkShade;
+  font-size: $euiFontSizeXS;
+  padding: $euiSizeS 0;
+  color: $euiColorDarkShade;
 }
