--- a/src/components/form/select/_select.scss
+++ b/src/components/form/select/_select.scss
@@ -4,7 +4,7 @@
 .kuiSelect {
   @include kuiFormControlStyle;
 
-  padding-right: $kuiSizeXXL; /* 1 */
+  padding-right: $euiSizeXXL; /* 1 */
   appearance: none;
 
   &::-ms-expand {
