--- a/src/components/header/header_breadcrumbs/_header_breadcrumbs.scss
+++ b/src/components/header/header_breadcrumbs/_header_breadcrumbs.scss
@@ -8,22 +8,22 @@
 
 .kuiHeaderBreadcrumb {
   display: inline-block;
-  height: $kuiHeaderChildSize;
-  line-height: $kuiHeaderChildSize;
-  padding: 0 $kuiSize;
+  height: $euiHeaderChildSize;
+  line-height: $euiHeaderChildSize;
+  padding: 0 $euiSize;
   position: relative;
-  color: $kuiHeaderBreadcrumbColor;
+  color: $euiHeaderBreadcrumbColor;
 
   // Slanted separator. Shows on all but last item.
   &:not(:last-child):after {
     position: absolute;
-    top: $kuiSizeL;
+    top: $euiSizeL;
     right: -3px; // Half the transformed width.
     content: "";
     width: 1px;
-    height: $kuiSize;
+    height: $euiSize;
     transform: rotate(15deg);
-    background: $kuiColorLightShade;
+    background: $euiColorLightShade;
   }
 
   &:not(.kuiHeaderBreadcrumb--collapsed) {
@@ -31,7 +31,7 @@
   }
 
   &.kuiHeaderBreadcrumb-isActive {
-    color: $kuiColorMediumShade;
+    color: $euiColorMediumShade;
   }
 }
 
@@ -44,7 +44,7 @@
   }
 
 .kuiHeaderBreadcrumb--collapsed {
-  color: $kuiColorLightShade;
+  color: $euiColorLightShade;
 }
 
 // Laptop
