--- a/src/components/icon/_icon.scss
+++ b/src/components/icon/_icon.scss
@@ -1,30 +1,30 @@
 .kuiIcon {
   display: inline-block;
   vertical-align: middle;
-  fill: $kuiTextColor;
+  fill: $euiTextColor;
 
   &:focus {
     opacity: 1; // We often hide icons on hover. Make sure they appear on focus.
-    background: $kuiFocusBackgroundColor;
+    background: $euiFocusBackgroundColor;
   }
 }
 
 .kuiIcon--basic {
-  fill: $kuiTextColor;
+  fill: $euiTextColor;
 }
 
 .kuiIcon--medium {
-  @include size($kuiSize);
+  @include size($euiSize);
 }
 
 .kuiIcon--large {
-  @include size($kuiSizeL);
+  @include size($euiSizeL);
 }
 
 .kuiIcon--xLarge {
-  @include size($kuiSizeXL);
+  @include size($euiSizeXL);
 }
 
 .kuiIcon--xxLarge {
-  @include size($kuiSizeXXL);
+  @include size($euiSizeXXL);
 }
