--- a/src/components/key_pad_menu/_index.scss
+++ b/src/components/key_pad_menu/_index.scss
@@ -1,5 +1,5 @@
 // Key padis a phone like nav comprised of an svg icon and a title.
 
-$kuiKeyPadMenuSize: $kuiSize * 6;
+$euiKeyPadMenuSize: $euiSize * 6;
 
 @import 'key_pad_menu'
