--- a/src/components/link/_mixins.scss
+++ b/src/components/link/_mixins.scss
@@ -5,6 +5,6 @@
 
   &:focus {
     text-decoration: underline;
-    background: $kuiFocusBackgroundColor;
+    background: $euiFocusBackgroundColor;
   }
 }
