--- a/src/components/loading/_loading_kibana.scss
+++ b/src/components/loading/_loading_kibana.scss
@@ -16,13 +16,13 @@
   }
 
   &:before {
-    box-shadow: 0 0 8px $kuiColorFullShade;
-    animation: 1s kuiLoadingKibanaPulsateAndFade $kuiAnimSlightResistance infinite;
+    box-shadow: 0 0 8px $euiColorFullShade;
+    animation: 1s kuiLoadingKibanaPulsateAndFade $euiAnimSlightResistance infinite;
   }
 
   &:after {
-    background-color: $kuiColorFullShade;
-    animation: 1s kuiLoadingKibanaPulsate $kuiAnimSlightResistance infinite;
+    background-color: $euiColorFullShade;
+    animation: 1s kuiLoadingKibanaPulsate $euiAnimSlightResistance infinite;
   }
 }
 
@@ -32,12 +32,12 @@
 .kuiLoadingKibana--medium {
   &:before,
   &:after {
-    height: $kuiSizeXS - 1; /* 1 */
-    bottom: -$kuiSizeXS;
+    height: $euiSizeXS - 1; /* 1 */
+    bottom: -$euiSizeXS;
   }
   .kuiLoadingKibana__icon {
     z-index: 999;
-    animation: 1s kuiLoadingKibanaBounceMedium $kuiAnimSlightResistance infinite;
+    animation: 1s kuiLoadingKibanaBounceMedium $euiAnimSlightResistance infinite;
   }
 }
 
@@ -47,40 +47,40 @@
 .kuiLoadingKibana--large {
   &:before,
   &:after {
-    height: $kuiSizeS - 2; /* 1 */
-    bottom: -$kuiSizeS;
+    height: $euiSizeS - 2; /* 1 */
+    bottom: -$euiSizeS;
   }
   .kuiLoadingKibana__icon {
-    animation: 1s kuiLoadingKibanaBounceLarge $kuiAnimSlightResistance infinite;
+    animation: 1s kuiLoadingKibanaBounceLarge $euiAnimSlightResistance infinite;
   }
 }
 
 .kuiLoadingKibana--xLarge {
   &:before,
   &:after {
-    height: $kuiSizeS;
-    bottom: -$kuiSizeM;
+    height: $euiSizeS;
+    bottom: -$euiSizeM;
   }
   .kuiLoadingKibana__icon {
-    animation: 1s kuiLoadingKibanaBounceXLarge $kuiAnimSlightResistance infinite;
+    animation: 1s kuiLoadingKibanaBounceXLarge $euiAnimSlightResistance infinite;
   }
 }
 
 @keyframes kuiLoadingKibanaBounceMedium {
   50% {
-    transform: translateY(-$kuiSizeS);
+    transform: translateY(-$euiSizeS);
   }
 }
 
 @keyframes kuiLoadingKibanaBounceLarge {
   50% {
-    transform: translateY(-$kuiSizeM);
+    transform: translateY(-$euiSizeM);
   }
 }
 
 @keyframes kuiLoadingKibanaBounceXLarge {
   50% {
-    transform: translateY(-$kuiSize);
+    transform: translateY(-$euiSize);
   }
 }
 
