--- a/src/components/page/page_content/_page_content_header_section.scss
+++ b/src/components/page/page_content/_page_content_header_section.scss
@@ -1,7 +1,7 @@
 .kuiPageContentHeaderSection {
 
   & + & {
-    margin-left: $kuiSizeXL;
+    margin-left: $euiSizeXL;
   }
 }
 
@@ -12,7 +12,7 @@
 
     & + & {
       margin-left: 0;
-      margin-top: $kuiSize;
+      margin-top: $euiSize;
     }
   }
 }
