--- a/src/components/page/page_header/_page_header.scss
+++ b/src/components/page/page_header/_page_header.scss
@@ -1,5 +1,5 @@
 .kuiPageHeader {
-  margin-bottom: $kuiSizeL;
+  margin-bottom: $euiSizeL;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -9,7 +9,7 @@
 @include screenXSmall {
   .kuiPageHeader {
     flex-direction: column;
-    padding: 0 $kuiSizeL;
+    padding: 0 $euiSizeL;
     margin-bottom: 0;
   }
 }
