--- a/src/components/page/page_header/_page_header_section.scss
+++ b/src/components/page/page_header/_page_header_section.scss
@@ -1,7 +1,7 @@
 .kuiPageHeaderSection {
 
   & + & {
-    margin-left: $kuiSizeXL;
+    margin-left: $euiSizeXL;
   }
 }
 @include screenXSmall {
@@ -11,7 +11,7 @@
 
     & + & {
       margin-left: 0;
-      margin-top: $kuiSize;
+      margin-top: $euiSize;
     }
   }
 }
