--- a/src/components/popover/_mixins.scss
+++ b/src/components/popover/_mixins.scss
@@ -1,5 +1,5 @@
 @mixin kuiPopoverTitle {
-  background-color: $kuiColorLightestShade;
-  border-bottom: $kuiBorderThin;
-  padding: $kuiSizeM;
+  background-color: $euiColorLightestShade;
+  border-bottom: $euiBorderThin;
+  padding: $euiSizeM;
 }
