--- a/src/components/progress/_progress.scss
+++ b/src/components/progress/_progress.scss
@@ -3,106 +3,106 @@
 // dealing with cross-browser progress bars.
 
 .kuiProgress {
-	width: 100%;
-	appearance: none;
-	border: none;
+    width: 100%;
+    appearance: none;
+    border: none;
   vertical-align: middle;
-	position: relative;
-	overflow: hidden;
-	background-color: $kuiColorLightShade;
+    position: relative;
+    overflow: hidden;
+    background-color: $euiColorLightShade;
 
   &::-webkit-progress-bar {
-    background-color: $kuiColorLightShade;
+    background-color: $euiColorLightShade;
   }
 
   &::-webkit-progress-value {
-    transition: width $kuiAnimSpeedNormal linear;
+    transition: width $euiAnimSpeedNormal linear;
   }
 
   &::-moz-progress-bar {
-    transition: width $kuiAnimSpeedNormal linear;
+    transition: width $euiAnimSpeedNormal linear;
   }
 
-	// Progress bars come in different colors.
-	$kuiProgressColors: (
-		primary: $kuiColorPrimary,
-		secondary: $kuiColorSecondary,
-		warning: $kuiColorWarning,
-		danger: $kuiColorDanger,
-		accent: $kuiColorAccent,
-		subdued: $kuiColorMediumShade,
-	);
+    // Progress bars come in different colors.
+    $euiProgressColors: (
+        primary: $euiColorPrimary,
+        secondary: $euiColorSecondary,
+        warning: $euiColorWarning,
+        danger: $euiColorDanger,
+        accent: $euiColorAccent,
+        subdued: $euiColorMediumShade,
+    );
 
-	@each $name, $color in $kuiProgressColors {
-		&.kuiProgress--#{$name} {
+    @each $name, $color in $euiProgressColors {
+        &.kuiProgress--#{$name} {
 
-			&::-webkit-progress-value {
-				background-color: $color;
-			}
+            &::-webkit-progress-value {
+                background-color: $color;
+            }
 
-			&::-moz-progress-bar {
-				background-color: $color;
-			}
+            &::-moz-progress-bar {
+                background-color: $color;
+            }
 
-			&.kuiProgress--indeterminate {
-				&:before {
-					background-color: $color;
-				}
-			}
-		}
-	}
+            &.kuiProgress--indeterminate {
+                &:before {
+                    background-color: $color;
+                }
+            }
+        }
+    }
 
-	// Progress bars come in different sizes.
-	$kuiProgressSizes: (
-		xs: $kuiSizeXS / 2,
-		s: $kuiSizeXS,
-		m: $kuiSizeS,
-		l: $kuiSize,
-	);
+    // Progress bars come in different sizes.
+    $euiProgressSizes: (
+        xs: $euiSizeXS / 2,
+        s: $euiSizeXS,
+        m: $euiSizeS,
+        l: $euiSize,
+    );
 
-	@each $name, $size in $kuiProgressSizes {
-		&.kuiProgress--#{$name} {
-			height: $size;
-		}
-	}
+    @each $name, $size in $euiProgressSizes {
+        &.kuiProgress--#{$name} {
+            height: $size;
+        }
+    }
 
-	// Progress bars can be set to fixed or absolute.
+    // Progress bars can be set to fixed or absolute.
   &.kuiProgress--fixed, &.kuiProgress--absolute {
-		top: 0;
-		left: 0;
-		right: 0;
-		background-color: transparent;
+        top: 0;
+        left: 0;
+        right: 0;
+        background-color: transparent;
 
-		&::-webkit-progress-bar {
-			background-color: transparent;
-		}
-	}
+        &::-webkit-progress-bar {
+            background-color: transparent;
+        }
+    }
 
   &.kuiProgress--fixed {
-		position: fixed;
-	}
+        position: fixed;
+    }
 
   &.kuiProgress--absolute {
-		position: absolute;
-	}
+        position: absolute;
+    }
 
-	/**
+    /**
    * An indeterminate bar has an unreliable end time. Because of a Firefox animation issue,
    * we apply this style to a <div> instead of a <progress> element.
    * See https://css-tricks.com/html5-progress-element/ for more info.
    */
-	&.kuiProgress--indeterminate {
-		&:before {
-			position: absolute;
-			content: "";
-			width: 100%;
-			top: 0;
-			bottom: 0;
-			left: 0;
-			transform: scaleX(0) translateX(0%);
-      animation: kuiProgress 1s $kuiAnimSlightResistance infinite;
-		}
-	}
+    &.kuiProgress--indeterminate {
+        &:before {
+            position: absolute;
+            content: "";
+            width: 100%;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            transform: scaleX(0) translateX(0%);
+      animation: kuiProgress 1s $euiAnimSlightResistance infinite;
+        }
+    }
 }
 
 @keyframes kuiProgress {
