--- a/src/components/toast/_global_toast_list.scss
+++ b/src/components/toast/_global_toast_list.scss
@@ -10,11 +10,11 @@
   flex-direction: column;
   align-items: stretch;
   position: fixed;
-  z-index: $kuiZToastList;
+  z-index: $euiZToastList;
   bottom: 0;
   right: 0;
-  width: $kuiToastWidth + $kuiSize; /* 3 */
-  padding-right: $kuiSize;
+  width: $euiToastWidth + $euiSize; /* 3 */
+  padding-right: $euiSize;
   max-height: 100vh; /* 1 */
 
   &:hover {
@@ -23,9 +23,9 @@
 }
 
 .kuiGlobalToastListItem {
-  margin-bottom: $kuiSize;
-  margin-right: $kuiSize;
-  animation: $kuiAnimSpeedNormal kuiShowToast $kuiAnimSlightResistance;
+  margin-bottom: $euiSize;
+  margin-right: $euiSize;
+  animation: $euiAnimSpeedNormal kuiShowToast $euiAnimSlightResistance;
   opacity: 1;
 
   /**
@@ -37,14 +37,14 @@
   }
 
   &.kuiGlobalToastListItem-isDismissed {
-    transition: opacity $kuiAnimSpeedNormal;
+    transition: opacity $euiAnimSpeedNormal;
     opacity: 0;
   }
 }
 
 @keyframes kuiShowToast {
   from {
-    transform: translateY($kuiSizeL) scale(.9);
+    transform: translateY($euiSizeL) scale(.9);
     opacity: 0;
   }
 
@@ -60,7 +60,7 @@
    */
   .kuiGlobalToastList {
     left: 0;
-    padding-left: $kuiSize;
+    padding-left: $euiSize;
     width: 100%; /* 1 */
   }
 }
