--- a/src/global_styling/theme_dark_variables.scss
+++ b/src/global_styling/theme_dark_variables.scss
@@ -1,15 +1,15 @@
 // Dark theme overides
 
-$kuiColorEmptyShade: #222;
-$kuiColorLightestShade: #272727;
-$kuiColorLightShade: #333;
-$kuiColorMediumShade: #444;
-$kuiColorDarkShade: #D9D9D9;
-$kuiColorDarkestShade: #F5F5F5;
-$kuiColorFullShade: #FFF;
-$kuiColorPrimary: #4da1c0;
-$kuiColorDanger: #bf4d4d;
-$kuiTextColor: #DDD;
+$euiColorEmptyShade: #222;
+$euiColorLightestShade: #272727;
+$euiColorLightShade: #333;
+$euiColorMediumShade: #444;
+$euiColorDarkShade: #D9D9D9;
+$euiColorDarkestShade: #F5F5F5;
+$euiColorFullShade: #FFF;
+$euiColorPrimary: #4da1c0;
+$euiColorDanger: #bf4d4d;
+$euiTextColor: #DDD;
 
 // Configuration
 @import 'variables/index';
