--- a/src/global_styling/variables/_colors.scss
+++ b/src/global_styling/variables/_colors.scss
@@ -11,7 +11,7 @@
 // For theming. Checks the text color and tells us whether it's light or dark.
 // Based on that we either tint or shade.
 @function tintOrShade($color, $tint, $shade) {
-  @if (lightness($kuiTextColor) > 50) {
+  @if (lightness($euiTextColor) > 50) {
     @return shade($color, $shade);
   } @else {
     @return tint($color, $tint);
@@ -19,7 +19,7 @@
 }
 
 @function shadeOrTint($color, $shade, $tint) {
-  @if (lightness($kuiTextColor) < 50) {
+  @if (lightness($euiTextColor) < 50) {
     @return shade($color, $shade);
   } @else {
     @return tint($color, $tint);
@@ -28,28 +28,28 @@
 
 // Core
 
-$kuiColorPrimary: #0079a5 !default;
-$kuiColorSecondary: #00A69B !default;
-$kuiColorAccent: #DD0A73 !default;
-$kuiColorHighlight: #FFFF00 !default;
-$kuiColorGhost: #FFF !default;
+$euiColorPrimary: #0079a5 !default;
+$euiColorSecondary: #00A69B !default;
+$euiColorAccent: #DD0A73 !default;
+$euiColorHighlight: #FFFF00 !default;
+$euiColorGhost: #FFF !default;
 
 // Status
-$kuiColorDanger: #A30000 !default;
-$kuiColorWarning: #E5830E !default;
+$euiColorDanger: #A30000 !default;
+$euiColorWarning: #E5830E !default;
 
 // Grays
-$kuiColorEmptyShade: #FFF !default;
-$kuiColorLightestShade: #F5F5F5 !default;
-$kuiColorLightShade: #D9D9D9 !default;
-$kuiColorMediumShade: #999 !default;
-$kuiColorDarkShade: #666 !default;
-$kuiColorDarkestShade: #3F3F3F !default;
-$kuiColorFullShade: #000 !default;
+$euiColorEmptyShade: #FFF !default;
+$euiColorLightestShade: #F5F5F5 !default;
+$euiColorLightShade: #D9D9D9 !default;
+$euiColorMediumShade: #999 !default;
+$euiColorDarkShade: #666 !default;
+$euiColorDarkestShade: #3F3F3F !default;
+$euiColorFullShade: #000 !default;
 
 // Every color below must be based mathmatically on the set above.
 
-$kuiTextColor: $kuiColorDarkestShade !default;
-$kuiTitleColor: $kuiColorFullShade !default;
-$kuiLinkColor: $kuiColorPrimary !default;
-$kuiFocusBackgroundColor: tintOrShade($kuiColorPrimary, 90%, 50%) !default;
+$euiTextColor: $euiColorDarkestShade !default;
+$euiTitleColor: $euiColorFullShade !default;
+$euiLinkColor: $euiColorPrimary !default;
+$euiFocusBackgroundColor: tintOrShade($euiColorPrimary, 90%, 50%) !default;
